# Player3

./: .gitignore
L3SoftCore/: CMakeLists.txt
L3SoftCore/Logger/: Logger.cpp  Logger.h
L3SoftCore/PurpleCPUCommunication/: PurpleCPUCommunication.cpp  PurpleCPUCommunication.h
L3SoftCore/src/: main.cpp
